@@ -2,6 +2,7 @@
 
 changes relative to sbcl-1.3.3:
   * bug fix: SB-EVAL does not signal an error for (THE KEYWORD :FOO)
+  * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)
 
 changes in sbcl-1.3.3 relative to sbcl-1.3.2:
   * enhancement: warn about argument mismatch for functions passed as
